<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_horizontal_green">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/uikit_margin_padding_size_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/uikit_margin_padding_size_large" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_medium"
        android:text="@string/overview_title"
        android:textAppearance="@style/Uikit.Style.TextAppearance.Subtitle1"
        android:textColor="@color/colorOnMinor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="@dimen/uikit_margin_padding_size_medium" />

    <LinearLayout
        android:id="@+id/layout_menu_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_large"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/uikit_margin_padding_size_xsmall"
        app:layout_constraintEnd_toStartOf="@+id/layout_menu_category"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/text_title_dashboard">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_menu_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_transaction_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_menu_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_menu_transaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorOnMinor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_menu_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_large"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/uikit_margin_padding_size_xsmall"
        app:layout_constraintEnd_toStartOf="@+id/layout_menu_account"
        app:layout_constraintStart_toEndOf="@id/layout_menu_transaction"
        app:layout_constraintTop_toBottomOf="@+id/text_title_dashboard">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_menu_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_category_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_menu_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_menu_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorOnMinor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_menu_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_large"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/uikit_margin_padding_size_xsmall"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/layout_menu_category"
        app:layout_constraintTop_toBottomOf="@+id/text_title_dashboard">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_menu_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_menu_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_menu_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorOnMinor" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_content"
        style="@style/Uikit.Style.CardView.Top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_xsmall"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_menu_account">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/uikit_margin_padding_size_large"
        android:contentDescription="@string/overview_transactions_content_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:srcCompat="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>